--- a/views/admin.html
+++ b/views/admin.html
@@ -1,3 +1,18 @@
-
-<br><br><br><br><br>
-<center><a href="/courseview">Course View</a> || <a href="/createnewcourse">Create New Course</a> || <a href="/modifycourse">Modify Existing Course</a> || <a href="/studentlist">Student Details</a> || <a href="/courseemail">Course Mail</a></center>
+<html>
+<head>
+  <link href="/views/css/styles.css" rel="stylesheet" type="text/css" media="screen" />
+  <link rel="stylesheet" href="/views/css/nivo-slider.css" type="text/css" media="screen" />
+</head>
+<body>
+  <div id="menu">
+    <ul>
+      <li><a href="/courseview">Course View</a></li>
+        <li><a href="/createnewcourse">Create Course</a></li>
+      <li><a href="/modifycourse">Modify Course</a></li>
+      <li><a href="/studentlist">Student Details</a> </li>
+      <li><a href="/courseemail">Course Mail</a></li>
+    </ul>
+  </div>
+<br><Br><br><br><br><Br><br><br><br><Br><br><br><br>
+</body>
+</html>
