--- a/views/selectmodule.html
+++ b/views/selectmodule.html
@@ -6,10 +6,11 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+<link rel="stylesheet" href="/views/css/style.css" type="text/css" media="screen" />
 </head>
 <body>
 
-
+<br><br><Br><br><br><br>
 <div class='container' >
 <h2 align='center'>Select an Option from the Left Panel</h2><br>
 
