--- a/views/index.html
+++ b/views/index.html
@@ -1,47 +1,74 @@
-<html ng-app>
-<head>
-<title>Problems Page</title>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <title>Peer Review System</title>
+    <link href="/views/css/styles.css" rel="stylesheet" type="text/css" media="screen" />
+		<link rel="stylesheet" href="/views/css/nivo-slider.css" type="text/css" media="screen" />
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+        tex2jax: {
+          inlineMath: [["$","$"],["\\(","\\)"]]
+        }
+      });
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-<script type="text/x-mathjax-config">
-  MathJax.Hub.Config({
-    tex2jax: {
-      inlineMath: [["$","$"],["\\(","\\)"]]
-    }
-  });
+    </script>
+    <script type="text/javascript"
+      src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full">
+    </script>
+    </head>
+    <body>
+  		<div id="header">
+			
+			<div id="logo">
+				<h1><a href="#">Peer Review System</a></h1>
+		  </div>
+		</div>
+	<div id="prew_box">
+ <div id="wrapper">
+        <div id="slider-wrapper">
+            <div id="slider" class="nivoSlider">
+                <img src="/views/images/prew_img1.jpg" alt="" />
+                <img src="/views/images/prew_img2.jpg" alt=""/>
+                <img src="/views/images/prew_img3.jpg" alt="" />
+            </div>
+        </div>
+</div>
 
-</script>
+<script type="text/javascript" src="/views/lib/jquery-1.4.3.min.js"></script>
+    <script type="text/javascript" src="/views/lib/jquery.nivo.slider.pack.js"></script>
+    <script type="text/javascript">
+    $(window).load(function() {
+        $('#slider').nivoSlider();
+    });
+    </script>
 
+		</div>
+		<div class="razd"></div>
 
-<script type="text/javascript"
-  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML-full">
-</script>
-</head>
-<body>
-<div class='container' >
-	<h2 align=center> Please login to access the features of website </h2>
-<h2 align='center'>List Of Problems</h2><br>
-		<table class='table'>
-		<thead>
-			<tr><th>sno</th><th>Problem</th>
+		<div id="content">
+      <div class='container' >
+      	<h2 align=center> Please login to access the features of website </h2>
+      <h2 align='center'>List Of Problems</h2><br><center>
+      		<table class='table' width="80%">
+      		<thead>
+      			<tr><th>sno</th><th>Problem</th>
 
-			<th>hint </th></tr>
-		</thead>
-		<tbody>
-				{{#each stmtdata}}
-			<tr >
-				<td>{{this.sno}}</td>
-				<td><div  style='white-space: pre-wrap'>{{this.problem}}</div></td>
-				<td>{{this.hint}}</td>
-			</tr>
-				{{/each}}
-		</tbody>
-		</table>
-    </div>
-</ul>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
-	</body>
+      			<th>hint </th></tr>
+      		</thead>
+      		<tbody>
+      				{{#each stmtdata}}
+      			<tr >
+      				<td align="center">{{this.sno}}</td>
+      				<td align="center"><div  style='white-space: pre-wrap'>{{this.problem}}</div></td>
+      				<td align="center">{{this.hint}}</td>
+      			</tr>
+      				{{/each}}
+      		</tbody>
+        </table></center>
+          </div>
+      </ul>
+      	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
+		<div class="razd"></div>
+
+    </body>
 </html>
