--- a/views/layouts/main.html
+++ b/views/layouts/main.html
@@ -1,19 +1,22 @@
 <html>
 <head>
   <title>Peer Review System</title>
+
 </head>
-<body >
+<body>
 <div id='header'>
 {{#if user}}
-Logged in as: <b>{{user.firstname}} {{user.lastname}}</b>.
-<a href='/logout'>Logout</a> |
-<a href='/studsettings'>Settings</a>
+<font color="red">Logged in as: <b>{{user.firstname}} {{user.lastname}}</b>.</font>
+<a href='/logout' style="color: #0066CC;">Logout</a> |
+<a href='/studsettings'style="color: #0066CC;">Settings</a>
 {{else}}
-<a href='/login'>Login</a> | <a href='/signup'>Sign up</a>
+<a href='/login'style="color: #0066CC;">Login</a> | <a href='/signup'style="color: #0066CC;">Sign up</a>
 {{/if}}
 </div>
 
 {{{body}}}
-
+<br>
+<p align="center"> Copyright © 2015 Lamar University<br>
+  All Rights belongs to Distance education devision dept. @2015</p>
 </body>
 </html>
