--- a/views/login.html
+++ b/views/login.html
@@ -1,11 +1,34 @@
+<html>
+<head>
+  <link href="/views/css/styles.css" rel="stylesheet" type="text/css" media="screen" />
+  <link rel="stylesheet" href="/views/css/nivo-slider.css" type="text/css" media="screen" />
+  <style>
+
+th, td {
+    padding: 10px;
+}
+</style>
+</head>
+<body>
+<center>
 {{#if badCredentials}}
 <p>The login information you entered is not correct.</p>
 {{/if}}
 <form action='/login' method='post'name='login' >
-Username: <input type='text' name='username' id="userid"><br>
-Password: <input type='password' name='password'><br>
-
-<button type='submit'>Log in</button>
-<a href="/"><input type='button' value='Cancel' name='Cancel'></a>
+<table >
+  <tr>
+    <th colspan=2>
+<font size="6" color="#FFFF99"> User Login </font></th></tr><tr>
+<td>
+<font size="5" color="#FFFF99">Username:&nbsp;&nbsp;</font></td><td><input type='text' name='username' id="userid" style="line-height:30px;
+  font-size:22px;"></td></tr><tr>
+<td><font size="5" color="#FFFF99">Password:&nbsp;&nbsp;</font></td><td><input type='password' name='password' style="line-height:30px;
+  font-size:22px;"></td></tr><tr>
+<td></td><td><button type='submit'style="height:40px;width:90px">Log in</button>&nbsp;&nbsp;
+<a href="/"><input type='button' value='Cancel' name='Cancel'style="height:40px;width:90px"></a></td></tr></table>
 </form>
-<a href="/pwdresetform"> Forgot Password</a>
+<br>
+<a href="/pwdresetform" style="line-height:20px;  font-size:12px; color: #FFFFFF;"> Forgot Password</a><br><br>
+</center>
+</body>
+</html>
