--- a/views/mycoursegrade.html
+++ b/views/mycoursegrade.html
@@ -1,21 +1,25 @@
 <html ng-app>
 <head>
-<title>module Page</title>
+<title>Course Grade</title>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
 <link rel="stylesheet" href="/views/css/style.css" type="text/css" media="screen" />
+
 </head>
 <body>
 
-
 <div class='container' >
-  <h3 align='center'>Data Recieved Successfully....</h3><br>
-<h3 align='center'>Select an Option from the Left Panel</h3><br>
+<br><br><br><Br><hr>
+  {{#if final_grade}}
+	<center><h2> Your Grade : {{final_grade}}</h2></center><hr>
+  {{else}}
+  	<center><h2> Final Grade Not Avaialble At This Moment</h2></center><hr>
+  {{/if}}
+<br>
 
-	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
-</body>
+	</body>
 </html>
