--- a/views/userscreen.html
+++ b/views/userscreen.html
@@ -4,12 +4,12 @@
 <style>
  .menu {
     float:left;
-    width:13%;
+    width:20%;
     height:100%;
   }
   .mainContent {
     float:left;
-    width:86%;
+    width:80%;
     height:100%;
   }
 </style>
@@ -18,28 +18,53 @@
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+
+<link rel="stylesheet" href="/views/css/sidebar/styles.css" type="text/css" media="screen" />
+<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+
 </head>
 <body>
-<div class="menu"><br><br><br><br><br>
+  <div >
+      <h1 align="center"><a href="#">Peer Review System</a></h1>
+        <h2 align="right" style="color:white">CourseID : <a href="/userscreen?courseId={{courseId}}">{{courseId}}</a></h2><br><br>
+    </div>
+<!--  <div id='cssmenu'>
+  <ul>
+     <li class='has-sub'><a href='#'><span>Modules</span></a>
+        <ul>
+          <li>  {{#each modules}}
+            <form id="{{this.modulename}}" action='/drafts' target="iframe_a" method='post'>
+
+          	<input type='hidden' name='modulename' value='{{this.modulename}}' >
+          <a href="javascript:{}" onclick="document.getElementById('{{this.modulename}}').submit(); return false;" style="color: #0066CC;">{{this.modulename}}</a>
+          </form>
+          {{/each}}</li>
+        </ul>
+     </li>
+      <li>  <a href="/reviewdrafts" target="iframe_a" >Grade Drafts</a></li>
+     <li class='last'><a href="/gradefinal" target="iframe_a" >Grade Solution</a></li>
+  </ul>
+</div>-->
+<div class="menu" style="background-color:#B8B894">
 <table align=center>
 
   {{#each modules}}
   <tr><th>
   <form id="{{this.modulename}}" action='/drafts' target="iframe_a" method='post'>
-<!-- Your Form -->
+
 	<input type='hidden' name='modulename' value='{{this.modulename}}' >
-<a href="javascript:{}" onclick="document.getElementById('{{this.modulename}}').submit(); return false;">{{this.modulename}}</a>
+<a href="javascript:{}" onclick="document.getElementById('{{this.modulename}}').submit(); return false;" style="color: #0066CC;">{{this.modulename}}</a>
 </form></th></tr>
 {{/each}}
 <tr><th>
     <hr>
-  <a href="/reviewdrafts" target="iframe_a">Grade Drafts</a></th></tr><tr><th>
-  <a href="/gradefinal" target="iframe_a">Grade Solution</a></th></tr></table>
+  <a href="/reviewdrafts" target="iframe_a" style="color: #0066CC;">Grade Drafts</a></th></tr><tr><th>
+  <a href="/gradefinal" target="iframe_a" style="color: #0066CC;">Grade Solution</a></th></tr><tr><th>
+  <a href="/mycoursegrade" target="iframe_a" style="color: #0066CC;">My Grade</a></th></tr></table>
 </div>
 <iframe src="/selectmodule" name="iframe_a" class="mainContent" frameborder="0">
 <p>Your browser does not support iframes.</p>
-</iframe>
-</body>
+</iframe><br>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
 	</body>
 </html>
