--- a/views/login.html
+++ b/views/login.html
@@ -28,7 +28,7 @@ th, td {
 <a href="/"><input type='button' value='Cancel' name='Cancel'style="height:40px;width:90px"></a></td></tr></table>
 </form>
 <br>
-<a href="/pwdresetform" style="line-height:20px;  font-size:12px; color: #FFFFFF;"> Forgot Password</a><br><br>
+<a href="/pwdresetform" style="line-height:20px;  font-size:12px; color: #FFFF99;"> Forgot Password</a><br><br>
 </center>
 </body>
 </html>
